--- a/app/src/main/res/layout/fragment_consultapadron.xml
+++ b/app/src/main/res/layout/fragment_consultapadron.xml
@@ -347,6 +347,29 @@
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:id="@+id/tipo_voto_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="36dp"
+                        android:orientation="horizontal"
+                        android:visibility="gone">
+
+                        <TextView
+                            style="@style/Widget.CardSupportingText.Bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:text="Lugar de votación:" />
+
+                        <TextView
+                            android:id="@+id/tipo_voto_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="right|center_vertical"
+                            android:text="Masculino" />
+
+                    </LinearLayout>
+
                 </LinearLayout>
             </LinearLayout>
 
