--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,9 @@
     <color name="colorAccent">@color/materialAccentColor</color>
 
     <!-- Colores de Material Design -->
-    <color name="materialDarkPrimaryColor">#303F9F</color>
-    <color name="materialPrimaryColor">#3F51B5</color>
-    <color name="materialLightPrimaryColor">#C5CAE9</color>
+    <color name="materialDarkPrimaryColor">#512DA8</color>
+    <color name="materialPrimaryColor">#673AB7</color>
+    <color name="materialLightPrimaryColor">#D1C4E9</color>
     <color name="materialTextIcons">#FFFFFF</color>
     <color name="materialAccentColor">#FF4081</color>
     <color name="materialLightAccentColor">#FF80AB</color>
