Se agregaron nuevas fuentes de Roboto para que al cambiar la fuente desde accesibilidad quede una UI consistente

--- a/app/src/main/res/layout/activity_consulta_padron.xml
+++ b/app/src/main/res/layout/activity_consulta_padron.xml
@@ -10,8 +10,9 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
+        android:minHeight="@dimen/app_bar_height"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
