--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,6 +64,7 @@
     </style>
 
     <style name="Widget.CardTitleText.Big" parent="android:Widget.TextView">
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
         <item name="android:textColor">@color/materialPrimaryText</item>
         <item name="android:textSize">24sp</item>
     </style>
@@ -74,18 +75,21 @@
     </style>
 
     <style name="Widget.CardSupportingText" parent="android:Widget.TextView">
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
         <item name="android:textColor">@color/materialPrimaryText</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="Widget.CardSupportingText.Light" parent="android:Widget.TextView">
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
         <item name="android:textColor">@color/materialTextIcons</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="Widget.CardSupportingText.Bold" parent="android:Widget.TextView">
+        <item name="fontPath">fonts/RobotoCondensed-Bold.ttf</item>
         <item name="android:textColor">@color/materialPrimaryText</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="Widget.CardActionButton.Primary" parent="Widget.CardActionButton">
@@ -93,6 +97,7 @@
     </style>
 
     <style name="Widget.CardActionButton" parent="android:Widget.Button">
+        <item name="fontPath">fonts/Roboto-Medium.ttf</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">48dp</item>
         <item name="android:paddingLeft">8dp</item>
