Se muestran los datos deshabilitados/duplicados (al fin)

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,6 +70,7 @@
     </style>
 
     <style name="Widget.CardSubtitleText" parent="android:Widget.TextView">
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
         <item name="android:textColor">@color/materialSecondaryText</item>
         <item name="android:textSize">14sp</item>
     </style>
