--- a/app/src/main/res/layout/activity_consulta_padron.xml
+++ b/app/src/main/res/layout/activity_consulta_padron.xml
@@ -10,9 +10,8 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/app_bar_height"
         android:fitsSystemWindows="true"
-        android:minHeight="@dimen/app_bar_height"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
