--- a/app/src/main/res/layout/activity_consulta_padron.xml
+++ b/app/src/main/res/layout/activity_consulta_padron.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="py.com.purplemammoth.apps.yoelijopy.ui.ConsultaPadronActivity">
+    tools:context="py.com.purpleapps.yovotopy.ui.ConsultaPadronActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
