--- a/app/src/main/res/layout/content_consulta_padron.xml
+++ b/app/src/main/res/layout/content_consulta_padron.xml
@@ -7,6 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="py.com.purplemammoth.apps.yoelijopy.ui.ConsultaPadronActivity"
+    tools:context="py.com.purpleapps.yovotopy.ui.ConsultaPadronActivity"
     tools:showIn="@layout/activity_consulta_padron" />
 
