--- a/app/src/main/res/menu/menu_consulta_padron.xml
+++ b/app/src/main/res/menu/menu_consulta_padron.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="py.com.purplemammoth.apps.yoelijopy.ui.ConsultaPadronActivity">
+    tools:context="py.com.purpleapps.yovotopy.ui.ConsultaPadronActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
