--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">@color/materialDarkPrimaryColor</color>
     <color name="colorAccent">@color/materialAccentColor</color>
 
+    <color name="primary">@color/materialPrimaryColor</color>
+    <color name="primary_dark">@color/materialDarkPrimaryColor</color>
+
     <!-- Colores de Material Design -->
     <color name="materialDarkPrimaryColor">#512DA8</color>
     <color name="materialPrimaryColor">#673AB7</color>
