--- a/app/src/main/res/layout/content_detalle_candidato.xml
+++ b/app/src/main/res/layout/content_detalle_candidato.xml
@@ -37,7 +37,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    style="@style/Widget.CardContent.WithActions"
+                    style="@style/Widget.CardContent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -230,7 +230,7 @@
 
                 </LinearLayout>
 
-                <LinearLayout
+                <!--<LinearLayout
                     style="@style/Widget.CardActions"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -240,7 +240,7 @@
                         android:id="@+id/guardar_button"
                         style="@style/Widget.CardActionButton.Primary"
                         android:text="Votar xD" />
-                </LinearLayout>
+                </LinearLayout>-->
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
