--- a/app/src/main/res/layout/fragment_denuncias.xml
+++ b/app/src/main/res/layout/fragment_denuncias.xml
@@ -18,11 +18,28 @@
             android:orientation="vertical"
             android:padding="@dimen/default_padding">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Enviar nuevo reporte"
-                android:textAppearance="?attr/textAppearanceSearchResultTitle" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/title_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:text="Enviar nuevo reporte"
+                    android:textAppearance="?attr/textAppearanceSearchResultTitle" />
+
+                <ImageView
+                    android:id="@+id/avizor_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_toRightOf="@id/title_text"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/elavizorlogo2" />
+            </RelativeLayout>
+
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/titulo_text_input"
