--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,60 +21,21 @@
             android:orientation="vertical"
             tools:visibility="visible">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/proximas_elecciones_card"
+            <include layout="@layout/card_info_general" />
+
+            <include layout="@layout/card_lugar_votacion" />
+
+            <include layout="@layout/card_votacion_accesible" />
+
+            <include layout="@layout/card_datos_votacion" />
+
+            <TextView
+                android:id="@+id/title_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/card_margin">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        style="@style/Widget.CardTitle.WithActions"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            style="@style/Widget.CardTitleText.Big"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Próximas Elecciones" />
-                    </LinearLayout>
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="120dp"
-                        android:background="@color/materialLightPrimaryColor"
-                        android:src="@drawable/logo_tsje" />
-
-                    <LinearLayout
-                        style="@style/Widget.CardContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Faltan: " />
-
-                        <TextView
-                            android:id="@+id/countdown_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:padding="@dimen/default_padding"
-                            android:text="5 d, 5 hs, 5min"
-                            android:textSize="24dp" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-
-            </android.support.v7.widget.CardView>
+                android:padding="8dp"
+                android:text="@string/section_candidatos"
+                android:textAppearance="?attr/textAppearanceSearchResultTitle" />
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
