--- a/app/src/main/res/layout/card_info_general.xml
+++ b/app/src/main/res/layout/card_info_general.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/title_proximas_text"
                 style="@style/Widget.CardTitleText.Big"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -37,6 +38,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/faltan_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Faltan: " />
