--- a/app/src/main/res/layout/view_empty_profile.xml
+++ b/app/src/main/res/layout/view_empty_profile.xml
@@ -10,6 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="Acá aparecerán tus datos si guardás una consulta como predeterminada"
+        android:text="Acá aparecerán tus datos si guardás una consulta del padrón como predeterminada"
         android:textAppearance="?attr/textAppearanceSearchResultTitle" />
 </FrameLayout>
