--- a/app/src/main/res/layout/fragment_denuncias.xml
+++ b/app/src/main/res/layout/fragment_denuncias.xml
@@ -33,8 +33,8 @@
 
                 <ImageView
                     android:id="@+id/avizor_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:adjustViewBounds="true"
                     android:src="@drawable/elavizorlogo2" />
