--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="default_padding">16dp</dimen>
     <dimen name="items_offset">4dp</dimen>
+    <dimen name="showcase_item_radius">24dp</dimen>
 </resources>
