--- a/app/src/debug/res/xml/app_tracker.xml
+++ b/app/src/debug/res/xml/app_tracker.xml
@@ -3,7 +3,7 @@
     tools:ignore="TypographyDashes">
 
     <!-- The apps Analytics Tracking Id -->
-    <string name="ga_trackingId">***REMOVED***</string>
+    <string name="ga_trackingId">UA-XXXXXXXX-X</string>
 
     <!-- Percentage of events to include in reports -->
     <string name="ga_sampleFrequency">100.0</string>
