--- a/app/src/release/res/xml/app_tracker.xml
+++ b/app/src/release/res/xml/app_tracker.xml
@@ -2,7 +2,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
 
     <!-- The apps Analytics Tracking Id -->
-    <string name="ga_trackingId">***REMOVED***</string>
+    <string name="ga_trackingId">UA-XXXXXXXX-X</string>
 
     <!-- Percentage of events to include in reports -->
     <string name="ga_sampleFrequency">100.0</string>
